# cmake_helloworld

./: .gitignore  CMakeCache.txt  CMakeLists.txt  buildAll.bat  buildAll.sh  buildHelloWorld.bat  cmake.bat  cmake_install.cmake  compileHelloWorld.bat  doxyConfig  helloworld.cpp  makefile  notes.txt  rebuildAll.bat  shellBuild.sh
source/: BankAccount.cpp  BankAccount.h  Foo.h  LoginDetails.cpp  LoginDetails.h  arithmetics.cpp  arithmetics.h  arrays.cpp  arrays.h  copying.cpp  exersice_operators_flowcontrol.cpp  footballer.cpp  footballer.h  functionOverload.h  header.h  helloworld.cpp  lists_maps.cpp  lists_maps.h  loops.cpp  loops.h  main.cpp  matrix.cpp  matrix.h  operatorOverload.cpp  person.cpp  person.h  pointer.h  refCountedString.cpp  source.cpp  staff.cpp  switch.h  types.cpp  types.h  vector.h
